kube-config-dev.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ita-dataloader
  namespace: mdsnamespace
  labels:
    app: ita-dataloader
spec:
  selector:
    matchLabels:
      app: ita-dataloader
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: ita-dataloader
    spec:
      containers:
      - name: ita-dataloader
        image: itadevacr.azurecr.io/ita-dataloader:#{Release.Artifacts._InternationalTradeAdministration.ita-dataloader.BuildId}#
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      restartPolicy: Always
---

kind: Service
apiVersion: v1
metadata:
  name: ita-dataloader
  namespace: mdsnamespace
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
  selector:
    app: ita-dataloader
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
  name: ita-dataloader
  namespace: mdsnamespace
spec:
  rules:
    - host: dataloader-dev.trade.gov
      http:
        paths:
          - pathType: ImplementationSpecific
            path: /
            backend:
              service:
                name: ita-dataloader
                port:
                  number: 80
  tls:
    - hosts:
        - dataloader-dev.trade.gov
      secretName: trade-gov-tls-secret
