kube-config-itadev2.yml
kind: Deployment
apiVersion: apps/v1beta1
metadata:
  name: ita-dataloader
  namespace: mdsnamespace
  labels:
    app: ita-dataloader
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: ita-dataloader
    spec:
      containers:
      - name: ita-dataloader
        image: itadevacr.azurecr.io/ita-dataloader:#{Release.Artifacts._InternationalTradeAdministration.ita-dataloader.BuildId}#
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      restartPolicy: Always
---

kind: Service
apiVersion: v1
metadata:
  name: ita-dataloader
  namespace: mdsnamespace
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
  selector:
    app: ita-dataloader
---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: ita-dataloader
  namespace: mdsnamespace
spec:
  rules:
    - host: dataloader-itadev2.vangos-cloudapp.us
      http:
        paths:
          - path: /
            backend:
              serviceName: ita-dataloader
              servicePort: 80
  tls:
    - hosts:
        - dataloader-itadev2.vangos-cloudapp.us
      secretName: tls-secret
