kube-config-prod.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ita-dataloader
  namespace: mdsnamespace
  labels:
    app: ita-dataloader
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  selector:
    matchLabels:
      app: ita-dataloader
  template:
    metadata:
      labels:
        app: ita-dataloader
    spec:
      containers:
      - name: ita-dataloader
        image: itasharedappregistryprodeast1.azurecr.io/ita-dataloader:#{Release.Artifacts._InternationalTradeAdministration.ita-dataloader.BuildId}#
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      restartPolicy: Always
---

kind: Service
apiVersion: v1
metadata:
  name: ita-dataloader
  namespace: mdsnamespace
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
  selector:
    app: ita-dataloader
---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
  name: ita-dataloader
  namespace: mdsnamespace
spec:
  rules:
    - host: dataloader.trade.gov
      http:
        paths:
          - path: /
            backend:
              serviceName: ita-dataloader
              servicePort: 80
  tls:
    - secretName: trade-gov-tls-secret
